--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.5",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "libphonenumber-js": "^1.11.14",
+    "libphonenumber-js": "^1.11.15",
+    "mysql2": "^3.11.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
